<resources>
    <string name="app_name">JB Skin Guru</string>
    <string name="btnStoreText">Go to Store</string>
    <string name="btnGoIndexText">Go back to Index</string>
    <string name="btnTipsText">See Tips</string>
    <string name="btnLoginText">Login</string>
    <string name="btnRegisterText">Register</string>
    <string name="btnAboutText">About Us</string>
    <string name="txtViewAboutTitleText">About Us Page</string>
    <string name="txtViewTipsTitleText">Tips Page</string>
    <string name="txtViewStoreTitleText">Store Page</string>
    <string name="txtViewIndexTitleText">Index Page</string>
    <string name="txtViewUsernameText">Username:</string>
    <string name="txtViewPasswordText">Password:</string>
    <string name="txtViewConfirmPasswordText">Confirm Password:</string>
    <string name="txtViewLoginTitleText">Login</string>
    <string name="txtViewRegisterTitleText">Register</string>
    <string name="notLoggedIn">You are not logged in.</string>
    <string name="addprod">Add Product</string>
    <string name="txtViewAddProductTitle">Add Product</string>
    <string name="txtviewProdName">Product Name:</string>
    <string name="txtviewprodprice">Price:</string>
    <string name="txtviewproddescription">Description:</string>
    <string name="addprodbtn">Add Product</string>
    <string name="BuyText">Buy</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="navbarIndex">Home</string>
</resources>
