<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/holo_green_seethrough"
        android:backgroundTint="@color/holo_green_seethrough">

        <TextView
            android:id="@+id/txtViewConfirmPassword"
            android:layout_width="74dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/txtViewConfirmPasswordText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewPassword" />

        <Button
            android:id="@+id/btnGoIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/holo_green_light"
            android:fontFamily="serif"
            android:onClick="btnGoIndex_onClick"
            android:text="@string/btnGoIndexText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/holo_green_light"
            android:fontFamily="serif"
            android:onClick="btnRegister_onClick"
            android:text="@string/txtViewRegisterTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txtViewPassword"
            app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <TextView
            android:id="@+id/txtViewUsername"
            android:layout_width="72dp"
            android:layout_height="24dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txtViewUsernameText"
            app:layout_constraintEnd_toStartOf="@+id/editUsername"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtViewLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@android:color/holo_green_dark"
            android:fontFamily="serif"
            android:text="@string/txtViewRegisterTitleText"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/errorMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editConfirmPassword" />

        <TextView
            android:id="@+id/txtViewPassword"
            android:layout_width="74dp"
            android:layout_height="26dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="58dp"
            android:text="@string/txtViewPasswordText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewUsername" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="36dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txtViewConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />
    </android.support.constraint.ConstraintLayout>


    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:menu="@menu/drawer_view"
            app:headerLayout="@layout/nav_header" />

    </android.support.v4.widget.DrawerLayout>